<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--TODO: Add the map fragment for the user to select the location-->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            class = "com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout="@layout/activity_authentication"
            tools:context=".MapsActivity" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
